<resources>

    <string name="app_name">Text to Emotion</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="board_text">Hello in Unified Complaints Organization</string>
    <string name="phonenumber">enter your phone number</string>
    <string name="ssn">enter your ssn</string>
    <string name="open_nav">sf</string>
    <string name="close_nav">aa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_complaint">Full complaint</string>
    <string name="summarized_text">Summarized complaint</string>
    <string name="complaint_subject">Complaint Subject</string>
    <string name="subject">Subject</string>
    <string name="governorate">Governorate</string>
    <string name="cairo">cairo</string>
    <string name="gov_organization">Gov Organization</string>
    <string name="ex_ministry_of_health">ex: ministry of health</string>
    <string name="city">City</string>
    <string name="nasr_city">Nasr City</string>
    <string name="date">Date</string>
    <string name="day_month_year">day/month/year</string>
    <string name="address">Address</string>
    <string name="optional">(optional)</string>
    <string name="your_complain">your complain</string>
    <string name="max_words_is_600">Max words is 600</string>
    <string name="comments">Comments</string>
    <string name="attachments">Attachments</string>
    <string name="add_attachment">Add attachment</string>
    <string name="submit">submit</string>
    <string name="sumbit_feedback">Review out App</string>
    <string name="code">code</string>
    <string name="code_was_sent">code was sent to %s</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="already_registered_login_now">Already registered? Login Now</string>
    <string name="feedback_analysis">Feedback Analysis</string>
    <string name="finished_complaints">Finished Complaints</string>
    <string name="complaints_summraization">Complaints Summraization</string>
    <string name="complaint_analysis">Complaint Analysis</string>
    <string name="logo">LOGO</string>
    <string name="allowed_charaters_in_complaint">*-/+|"'٠١٢٣٤٥٦٧٨٩ءآأؤإئابتثجحخدذرزسشصضطظعغفقكلمنهويىة ؟،.;:« »)(!@#$%^</string>
    <string name="emailhint">example@fcis.com</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout ?</string>
    <string name="write_your_feedback">write your feedback</string>
    <string name="submit_review">Submit Review</string>
</resources>