<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".authintication.LoginActivity">

        <ImageView
            android:id="@+id/wave"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"

            android:src="@drawable/wave__red_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/board_text"
            android:textColor="?attr/editTextColor"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wave" />


        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:hint="@string/phonenumber"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/ssn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <EditText
            android:id="@+id/ssn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:hint="@string/ssn"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:text="Sign in"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/rembemer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ssn" />


        <CheckBox
            android:id="@+id/rembemer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="rember me"
            app:layout_constraintBottom_toTopOf="@+id/member"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin" />


        <TextView
            android:id="@+id/member"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginTop="10dp"
            android:text="Sign up"
            android:textAlignment="center"
            android:textColor="?attr/editTextColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/waveblack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rembemer" />

        <ImageView
            android:id="@+id/waveblack"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"

            android:src="@drawable/wave__black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:rotation="180" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
